deploy/deploy-local.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: deploy-demo
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: demo.deploy
      http:
        paths:
          - path: /deploy-demo(/|$)(.*)
            backend:
              serviceName: deploy-demo
              servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-demo
  namespace: demo
  labels:
    app: deploy-demo
spec:
  type: ClusterIP
  selector:
    app: deploy-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
# 无状态
kind: Deployment
metadata:
  name: deploy-demo
  namespace: demo
spec:
  replicas: 2
  revisionHistoryLimit: 10
  minReadySeconds: 3
  selector:
    matchLabels:
      app: deploy-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: deploy-demo
    spec:
      containers:
        - image: mingyuanxiaoshui/deploy-demo:1
          name: deploy-demo
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          # livenessProbe:
          #   tcpSocket:
          #     port: 80
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
