deploy/deploy.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: $HOST
      http:
        paths:
        - path: /$APP_NAME(/|$)(.*)
          backend:
            serviceName: $APP_NAME
            servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME
spec:
  type: ClusterIP
  selector:
    app: $APP_NAME
  ports:
  - name: http
    port: $POD_PORT
    targetPort: $POD_PORT
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
spec:
  replicas: $REPLICAS
  revisionHistoryLimit: 10
  minReadySeconds: 3
  selector:
    matchLabels:
      app: $APP_NAME
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - image: $IMAGE_NAME
          name: $APP_NAME
          ports:
            - containerPort: $POD_PORT
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: $POD_PORT
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: $POD_PORT
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: $CPU
              memory: $MEM
            limits:
              cpu: $CPU
              memory: $MEM
